start to make web dev portfolio responsive

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <header class="header">
         <h3><a href="./task1.html">Task 1</a></h3>
+        <h3><a href="./web-dev-portfolio/web-dev-index.html">web-dev-index</a></h3>
+        
     </header>
 
 </body>
