--- a/web-dev-portfolio/web-dev-index.html
+++ b/web-dev-portfolio/web-dev-index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header secondary-bg hide">
+    <header class="header secondary-bg ">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -38,7 +38,7 @@
         </div>
     </header>
     <main>
-        <section class="about secondary-bg hide">
+        <section class="about secondary-bg ">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">
                 I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
@@ -154,7 +154,7 @@
             </div>
         </section>
     </main>
-    <footer class="secondary-bg hide">
+    <footer class="secondary-bg">
         <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
             <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Sunday through Thursday.</p>
